# TimeWindowSearch

./: .gitignore  README.md
TimeWindowIndex/: CMakeLists.txt
TimeWindowIndex/include/: construction.h  iRG_search.h  index.h  utils.h
TimeWindowIndex/include/utils/: DataType.hpp  File_IO.cpp  File_IO.h
TimeWindowIndex/tests/: CMakeLists.txt  test_search.cpp
